--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog of Skaters</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+<div>
+    <nav>
+        <a href="neuerBeitrag.html">Beitrag erstellen</a>
+        <a href="index.html"><img src="/Stockmaterial/Logo.png" alt="Logo"></a>
+        <a href="suche.html">Suche</a>
+        <a href="login.html">Login</a>
+    </nav>
+</div>
+    </header>
+    <main>
+    <div>
+<h1>Beitrag eines Users</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi, obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis, consequatur, hic ab aspernatur!</p>
+<img src="Fotos/AdobeStock_347641428.jpeg" alt="Tunnel black/white">
+<p>Zueletzt Aktualisiert ...</p>
+<video src="Videos/OllieGapFuwa.MOV" controls></video>
+<p>Zueletzt Aktualisiert ...</p>
+</div>
+<div>
+<h1>Beitrag eines weiteren Users</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi, obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis, consequatur, hic ab aspernatur!</p>
+<img src="Fotos/Ollie.jpeg" alt="Ollie">
+<p>Zueletzt Aktualisiert ...</p>
+</div>
+</main>
+    <footer>
+        <hr>
+        <a href="datenschutz.html">Datenschutz</a> <br>
+        <a href="impressum.html">impressum</a>
+    </footer>
 </body>
 </html>
