--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,37 +8,47 @@
     <title>Blog of Skaters</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-<div>
-    <nav>
-        <a href="neuerBeitrag.html">Beitrag erstellen</a>
-        <a href="index.html"><img src="/Stockmaterial/Logo.png" alt="Logo"></a>
-        <a href="suche.html">Suche</a>
-        <a href="login.html">Login</a>
-    </nav>
-</div>
+        <nav>
+            <div id="nav-item-left">
+                <a class="navelement" href="neuerBeitrag.html"><b>Beitrag erstellen </b></a>
+            </div>
+            <div class="nav-item">
+                <a href="index.html"><img id="logo" src="/Stockmaterial/Logo.png" alt="Logo"></a>
+            </div>
+            <div id="nav-item-right"><a class="navelement" href="suche.html"><b>Suche</b></a>
+                <a class="navelement" href="login.html"><b>Login</b></a>
+            </div>
+        </nav>
+        <h1>Blog of Skaters</h1>
     </header>
     <main>
-    <div>
-<h1>Beitrag eines Users</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi, obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis, consequatur, hic ab aspernatur!</p>
-<img src="Fotos/AdobeStock_347641428.jpeg" alt="Tunnel black/white">
-<p>Zueletzt Aktualisiert ...</p>
-<video src="Videos/OllieGapFuwa.MOV" controls></video>
-<p>Zueletzt Aktualisiert ...</p>
-</div>
-<div>
-<h1>Beitrag eines weiteren Users</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi, obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis, consequatur, hic ab aspernatur!</p>
-<img src="Fotos/Ollie.jpeg" alt="Ollie">
-<p>Zueletzt Aktualisiert ...</p>
-</div>
-</main>
+        <div id="post-user-ungerade">
+            <h2>Beitrag eines Users</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi,
+                obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis,
+                consequatur, hic ab aspernatur!</p>
+            <img src="Fotos/AdobeStock_347641428.jpeg" alt="Tunnel black/white">
+            <p>Zueletzt Aktualisiert ...</p>
+            <video src="Videos/OllieGapFuwa.MOV" controls></video>
+            <p>Zueletzt Aktualisiert ...</p>
+        </div>
+        <div id="post-user-gerade">
+            <h2>Beitrag eines weiteren Users</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi,
+                obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis,
+                consequatur, hic ab aspernatur!</p>
+            <img src="Fotos/Ollie.jpeg" alt="Ollie">
+            <p>Zueletzt Aktualisiert ...</p>
+        </div>
+    </main>
     <footer>
         <hr>
         <a href="datenschutz.html">Datenschutz</a> <br>
         <a href="impressum.html">impressum</a>
     </footer>
 </body>
+
 </html>
