--- a/login.html
+++ b/login.html
@@ -5,16 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="/Stockmaterial/Logo.png" alt="Logo"></a>
-        
+        <nav id="navbar">
+            <div id="nav-item-left">
+                <a class="navelement" href="neuerBeitrag.html"><b>Beitrag erstellen </b></a>
+            </div>
+            <div class="nav-item">
+                <a href="index.html"><img id="logo" src="/Stockmaterial/Logo.png" alt="Logo"></a>
+            </div>
+            <div id="nav-item-right"><a class="navelement" href="suche.html"><b>Suche</b></a>
+                <a class="navelement" href="login.html"><b>Login</b></a>
+            </div>
+        </nav>
+        <a class="title" href="index.html">
+            <h1>Blog of Skaters</h1>
+        </a>
     </header>
+
     <main>
-    <h1>Anmelden oder Registrieren</h1>
+    <h2>Anmelden oder Registrieren</h2>
     <div>
-        <h2>Du hast bereits ein Konto? Melde dich hier an</h2>
+        <h3>Du hast bereits ein Konto? Melde dich hier an</h3>
         <form>
             <fieldset>
                 <legend>Login Informationen</legend>
@@ -29,7 +43,7 @@
         </form>
     </div>
     <div>
-<h2>Du bist neu hier? Dann registriere dich gleich</h2>
+<h3>Du bist neu hier? Dann registriere dich gleich</h3>
 <form>
     <fieldset>
         <legend>Persönliche Informationen</legend>
