--- a/datenschutz.html
+++ b/datenschutz.html
@@ -5,15 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutz</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
-    <a href="index.html"><img src="/Stockmaterial/Logo.png" alt="Logo"></a>
-</header>
+    <header>
+        <nav id="navbar">
+            <div id="nav-item-left">
+                <a class="navelement" href="neuerBeitrag.html"><b>Beitrag erstellen </b></a>
+            </div>
+            <div class="nav-item">
+                <a href="index.html"><img id="logo" src="/Stockmaterial/Logo.png" alt="Logo"></a>
+            </div>
+            <div id="nav-item-right"><a class="navelement" href="suche.html"><b>Suche</b></a>
+                <a class="navelement" href="login.html"><b>Login</b></a>
+            </div>
+        </nav>
+        <a class="title" href="index.html">
+            <h1>Blog of Skaters</h1>
+        </a>
+    </header>
+
 <main>
-<h1>Datenschutz</h1>
+<h2>Datenschutz</h2>
 </main>
 <footer>
+    <hr>
     <a href="impressum.html">impressum</a>
 </footer>
 </body>
