--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog of Skaters</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
             <div id="nav-item-left">
                 <a class="navelement" href="neuerBeitrag.html"><b>Beitrag erstellen </b></a>
             </div>
@@ -22,32 +23,144 @@
                 <a class="navelement" href="login.html"><b>Login</b></a>
             </div>
         </nav>
-        <h1>Blog of Skaters</h1>
+        <a class="title" href="index.html">
+            <h1>Blog of Skaters</h1>
+        </a>
     </header>
+
     <main>
-        <div id="post-user-ungerade">
-            <h2>Beitrag eines Users</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi,
-                obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis,
-                consequatur, hic ab aspernatur!</p>
-            <img src="Fotos/AdobeStock_347641428.jpeg" alt="Tunnel black/white">
-            <p>Zueletzt Aktualisiert ...</p>
-            <video src="Videos/OllieGapFuwa.MOV" controls></video>
-            <p>Zueletzt Aktualisiert ...</p>
+
+
+
+
+
+
+        <div class="beiträge">
+            <div class="post-user-ungerade">
+                <h2>Beitrag eines Users</h2>
+                <div class="textmedia">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit
+                        praesentium sequi,
+                        obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates
+                        officiis,
+                        consequatur, hic ab aspernatur!</p>
+
+
+                    <input type="radio" id="image1" name="image" checked>
+                    <input type="radio" id="image2" name="image">
+                    <input type="radio" id="image3" name="image">
+
+                    <div class="container mediaungerade">
+                        <div class="featured-wrapper">
+                            <ul class="featured-list">
+                                <li>
+                                    <figure>
+                                        <img src="Fotos/ibau session/2022-06-04_Skater_-11.jpg" alt="">
+                                    </figure>
+                                </li>
+                                <li>
+                                    <figure>
+                                        <img src="Fotos/ibau session/2022-06-04_Skater_-24.jpg"
+                                            alt="">
+                                    </figure>
+                                </li>
+                                <li>
+                                    <figure>
+                                        <img src="Fotos/ibau session/2022-06-04_Skater_-7.jpg"
+                                            alt="">
+                                    </figure>
+                                </li>
+                            </ul>
+                            <ul class="arrows">
+                                <li>
+                                    <label for="image1"></label>
+                                </li>
+                                <li>
+                                    <label for="image2"></label>
+                                </li>
+                                <li>
+                                    <label for="image3"></label>
+                                </li>
+                            </ul>
+                            <ul class="dots">
+                                <li>
+                                    <label for="image1"></label>
+                                </li>
+                                <li>
+                                    <label for="image2"></label>
+                                </li>
+                                <li>
+                                    <label for="image3"></label>
+                                </li>
+                            </ul>
+                        </div>
+                        <ul class="thumb-list">
+                            <li>
+                                <label for="image1">
+                                    <img src="Fotos/AdobeStock_347641428.jpeg" alt="">
+                                    <span class="outer">
+                                        <span class="inner">Caption1</span>
+                                    </span>
+                                </label>
+                            </li>
+                            <li>
+                                <label for="image2">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/unsplash_nature11.jpg"
+                                        alt="">
+                                    <span class="outer">
+                                        <span class="inner">Caption2</span>
+                                    </span>
+                                </label>
+                            </li>
+                            <li>
+                                <label for="image3">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/unsplash_nature6.jpg"
+                                        alt="">
+                                    <span class="outer">
+                                        <span class="inner">Caption3</span>
+                                    </span>
+                                </label>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <p class="aktualisiert">Zueletzt Aktualisiert ...</p>
+            </div>
+
+            <div class="post-user-gerade">
+                <h2>Beitrag eines weiteren Users</h2>
+                <div class="textmedia">
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit
+                        praesentium sequi,
+                        obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates
+                        officiis,
+                        consequatur, hic ab aspernatur!</p>
+                    <img class="mediagerade" src="Fotos/Ollie.jpeg" alt="Ollie">
+                </div>
+                <p class="aktualisiert">Zueletzt Aktualisiert ...</p>
+            </div>
         </div>
-        <div id="post-user-gerade">
-            <h2>Beitrag eines weiteren Users</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ut! Veniam sit praesentium sequi,
-                obcaecati voluptatem nihil distinctio incidunt libero expedita amet et optio voluptates officiis,
-                consequatur, hic ab aspernatur!</p>
-            <img src="Fotos/Ollie.jpeg" alt="Ollie">
-            <p>Zueletzt Aktualisiert ...</p>
-        </div>
+
     </main>
+
     <footer>
-        <hr>
-        <a href="datenschutz.html">Datenschutz</a> <br>
-        <a href="impressum.html">impressum</a>
+        <br>
+        <nav class="footer-nav">
+            <div class="footer-nav-bottom">
+                <div class="instagram footnav">
+                    <a href="https://www.instagram.com/marcelrnnr/">Instagram</a>
+                </div>
+                <div class="datenschutz footnav">
+                    <a href="datenschutz.html">Datenschutz</a>
+                </div>
+                <div class="impressum footnav">
+                    <a href="impressum.html">impressum</a>
+                </div>
+            </div>
+            <div class="footer-nav-top">
+                <p>@2022 Marcel Renner</p>
+            </div>
+        </nav>
     </footer>
 </body>
 
